--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>XState - JavaScript State Machines and Statecharts</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,700"
+      href="https://fonts.googleapis.com/css?family=Inter:300,700"
       rel="stylesheet"
     />
     <style>
@@ -23,7 +23,7 @@
         width: 100%;
         margin: 0;
         padding: 0;
-        font-family: Roboto, Arial, Helvetica, sans-serif;
+        font-family: Inter, Arial, Helvetica, sans-serif;
         font-size: 14px;
       }
 
@@ -42,7 +42,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient(to bottom right, #232435, #3a3c5a);
+        background-image: linear-gradient(to bottom right, #1E1E28, #4D4F60);
         animation: fade-in 0.3s ease;
       }
 
@@ -68,8 +68,12 @@
 
       .logo {
         width: 10rem;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
         animation: slide-up 0.6s cubic-bezier(0.2, 0, 0.2, 1);
+      }
+
+      .logo img {
+        width: 100%;
       }
 
       p {
@@ -119,12 +123,12 @@
   </head>
 
   <body>
-    <a href="https://github.com/davidkpiano/xstate" class="logo"
+    <a href="https://github.com/statelyai/xstate" class="logo"
       ><img src="./logo-white.svg" alt="XState"
     /></a>
     <ul class="links">
       <li class="link" style="--i: 0">
-        <a href="https://github.com/davidkpiano/xstate">GitHub</a>
+        <a href="https://github.com/statelyai/xstate">GitHub</a>
       </li>
       <li class="link" style="--i: 1">
         <a href="/docs">Docs</a>
