--- a/examples/7guis-2-temperature-vue/index.html
+++ b/examples/7guis-2-temperature-vue/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
+    <title>7GUIs - 2. Temperature Converter</title>
   </head>
   <body>
     <div id="app"></div>
